--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@trpc/next": "next",
         "@trpc/react-query": "next",
         "@trpc/server": "next",
+        "bcrypt": "^5.1.1",
         "clsx": "^2.1.0",
         "next": "^14.1.3",
         "react": "18.2.0",
@@ -30,6 +31,7 @@
     },
     "devDependencies": {
         "@svgr/webpack": "^8.1.0",
+        "@types/bcrypt": "^5.0.2",
         "@types/eslint": "^8.56.2",
         "@types/node": "^20.11.20",
         "@types/react": "^18.2.57",
