--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "dev": "next dev",
         "postinstall": "prisma generate",
         "lint": "next lint",
+        "prettier": "prettier --check",
+        "prettier:fix": "prettier --write --list-different .",
         "start": "next start"
     },
     "dependencies": {
@@ -22,6 +24,7 @@
         "@trpc/server": "next",
         "bcrypt": "^5.1.1",
         "clsx": "^2.1.0",
+        "jsonwebtoken": "^9.0.2",
         "next": "^14.1.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -33,6 +36,7 @@
         "@svgr/webpack": "^8.1.0",
         "@types/bcrypt": "^5.0.2",
         "@types/eslint": "^8.56.2",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.20",
         "@types/react": "^18.2.57",
         "@types/react-dom": "^18.2.19",
@@ -40,6 +44,7 @@
         "@typescript-eslint/parser": "^7.1.1",
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.1.3",
+        "eslint-config-prettier": "^9.1.0",
         "postcss": "^8.4.34",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.11",
