--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "next build",
         "db:push": "prisma db push",
         "db:studio": "prisma studio",
+        "db:seed": "prisma db seed",
         "dev": "next dev",
         "postinstall": "prisma generate",
         "lint": "next lint",
@@ -33,6 +34,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@faker-js/faker": "^8.4.1",
         "@svgr/webpack": "^8.1.0",
         "@types/bcrypt": "^5.0.2",
         "@types/eslint": "^8.56.2",
@@ -50,7 +52,11 @@
         "prettier-plugin-tailwindcss": "^0.5.11",
         "prisma": "^5.10.2",
         "tailwindcss": "^3.4.1",
+        "tsx": "^4.7.1",
         "typescript": "^5.4.2"
+    },
+    "prisma": {
+        "seed": "npx tsx prisma/seed.ts"
     },
     "ct3aMetadata": {
         "initVersion": "7.30.0"
